Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32882

SoundEffect does not generate sound when loops is SoundEffect.Infinite

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.0
    • 5.1.0
    • Multimedia
    • None
    • Mac OS X Mountain Lion

    Description

      The QML code below does not generate any sound.

      SoundEffect {
      id: audioPlayer
      loops: SoundEffect.Infinite
      source: "qrc:///audio/alert.wav"
      }

      Setting loops to any other positive value seems to work.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            janichol Andy Nichols
            yvedebuysscher Yve De Buysscher
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes